apply plugin: "com.android.application"
apply from: "../utils.gradle"


android {
	compileSdkVersion 27
	buildToolsVersion "27.0.2"

	defaultConfig {
		applicationId "org.alfonz.samples"
		minSdkVersion 16
		targetSdkVersion 27
		versionCode getVersionCode(majorVersion, minorVersion, patchVersion, buildVersion)
		versionName getVersionName(majorVersion, minorVersion, patchVersion)
		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
	}

	buildTypes {
		debug {
			buildConfigField "boolean", "LOGS", "true"
			buildConfigField "boolean", "DEV_ENVIRONMENT", "true"

			versionNameSuffix "-debug"
		}

		release {
			buildConfigField "boolean", "LOGS", "false"
			buildConfigField "boolean", "DEV_ENVIRONMENT", "false"

			minifyEnabled false
			proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
		}
	}

	compileOptions {
		sourceCompatibility JavaVersion.VERSION_1_8
		targetCompatibility JavaVersion.VERSION_1_8
	}

	dataBinding {
		enabled = true
	}
}


dependencies {
	implementation fileTree(dir: "libs", include: ["*.jar"])
	implementation project(":alfonz-adapter")
	implementation project(":alfonz-arch")
	implementation project(":alfonz-graphics")
	implementation project(":alfonz-media")
	implementation project(":alfonz-mvvm")
	implementation project(":alfonz-rest")
	implementation project(":alfonz-rx")
	implementation project(":alfonz-utility")
	implementation project(":alfonz-view")
	implementation "android.arch.lifecycle:runtime:$androidArchRuntimeVersion"
	implementation "android.arch.lifecycle:extensions:$androidArchVersion"
	implementation "com.android.support:support-compat:$androidSupportVersion"
	implementation "com.android.support:support-core-utils:$androidSupportVersion"
	implementation "com.android.support:support-core-ui:$androidSupportVersion"
	implementation "com.android.support:support-fragment:$androidSupportVersion"
	implementation "com.android.support:appcompat-v7:$androidSupportVersion"
	implementation "com.android.support:recyclerview-v7:$androidSupportVersion"
	implementation "com.android.support:support-annotations:$androidSupportVersion"
	implementation "com.android.support:design:$androidSupportVersion"
	implementation "com.google.code.gson:gson:$gsonVersion"
	implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
	implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
	implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
	implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
	implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
	debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
	releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
	testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
}
